# simpleTUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  simpleTUIConfig.cmake.in
app/: CMakeLists.txt  main.cpp
include/: helperMethods.hpp  keyHandler.hpp  simpleTUI.hpp  simpleTUI2.hpp  useful.hpp
lib/Pos2d/include/: Pos2d.hpp
src/: helperMethods.cpp  keyHandler.cpp  simpleTUI.cpp  simpleTUI2.cpp
temp_app/: main.cpp
